--- a/index.html
+++ b/index.html
@@ -15,6 +15,41 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="/assets/maugallery.simp.js" defer></script>
 <script src="/assets/scripts.simp.js" defer></script>
+<script type="application/ld+json">
+	{
+		"@context": "http://schema.org",
+		"@type": "LocalBusiness",
+		"url" : "https://enzor66.github.io/Projet9/",
+		"telephone" : "05 56 67 78 89",
+		"name": "Nina Carducci Photographe",
+		"description" : "Nina Carducci : photographe professionelle à Bordeaux",
+		"priceRange": "50€ 400€",
+		"address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		},
+		"geo": {
+			"@type": "GeoCoordinates",
+			"latitude": 44.8466732,
+			"longitude": -0.6065805
+		},
+		"openingHoursSpecification": {
+			"@type": "OpeningHoursSpecification",
+			"dayOfWeek": [
+				"Monday",
+				"Tuesday",
+				"Wednesday",
+				"Thursday",
+				"Friday"
+			],
+			"opens": "10:00",
+			"closes": "19:00"
+		}
+	}
+</script>
 
 
 <!-- Tags SEO -->
@@ -73,19 +108,19 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 				<picture>
 					<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-650w.webp" type="image/webp" media="(max-width: 650px)">
 					<source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.webp" type="image/webp">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.jpg" class="d-block w-100" alt="Un homme d'affaire marchant sur un passage piéton">
+					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.jpg" class="d-block w-100 h-100" alt="Un homme d'affaire marchant sur un passage piéton">
 				</picture>			</div>
 			<div class="carousel-item">
 				<picture>
 					<source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-650w.webp" type="image/webp" media="(max-width: 650px)">
 					<source srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1600w.webp" type="image/webp">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1600w.jpg" class="d-block w-100" loading="lazy" alt="Un public enjoué lors d'un concert ou d'un spectacle">
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-1600w.jpg" class="d-block w-100 h-100" loading="lazy" alt="Un public enjoué lors d'un concert ou d'un spectacle">
 				</picture>			</div>
 			<div class="carousel-item">
 				<picture>
 					<source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-650w.webp" type="image/webp" media="(max-width: 650px)">
 					<source srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1600w.webp" type="image/webp">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1600w.jpg" class="d-block w-100" loading="lazy" alt="Deux mariés s'embrassant devant les applaudissemnts de leurs invités">
+					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1600w.jpg" class="d-block w-100 h-100" loading="lazy" alt="Deux mariés s'embrassant devant les applaudissemnts de leurs invités">
 				</picture>			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -100,7 +135,7 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 </section>
 <section id="about">
 	<div class="picture left">
-		<img src="assets/images/nina.webp" width="560" height="550" alt="Photo de Nina Carducci la photographe">
+		<img src="assets/images/nina.webp" width="550" height="550" alt="Photo de Nina Carducci la photographe">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -207,43 +242,6 @@ passionnée par son métier elle réalise des clichés à l'occasion de concert,
 	</div>
 </section>
 
-
-
-<script type="application/ld+json">
-	{
-		"@context": "http://schema.org",
-		"@type": "LocalBusiness",
-		"url" : "https://enzor66.github.io/Projet9/",
-		"telephone" : "05 56 67 78 89",
-		"name": "Nina Carducci Photographe",
-		"description" : "Nina Carducci : photographe professionelle à Bordeaux",
-		"priceRange": "50€ 400€",
-		"address": {
-			"@type": "PostalAddress",
-			"streetAddress": "68 avenue Alsace-Lorraine",
-			"addressLocality": "Bordeaux",
-			"postalCode": "33200",
-			"addressCountry": "France"
-		},
-		"geo": {
-			"@type": "GeoCoordinates",
-			"latitude": 44.8466732,
-			"longitude": -0.6065805
-		},
-		"openingHoursSpecification": {
-			"@type": "OpeningHoursSpecification",
-			"dayOfWeek": [
-				"Monday",
-				"Tuesday",
-				"Wednesday",
-				"Thursday",
-				"Friday"
-			],
-			"opens": "10:00",
-			"closes": "19:00"
-		}
-	}
-</script>
 
 
 </body>
